# exia

./: .gitignore  CHANGELOG.md  CODE_EDITOR_IMPROVEMENTS.md  CODE_EDITOR_IMPROVEMENTS_V2.md  Cargo.toml  DESIGN_SYSTEM.md  Dioxus.toml  FIXES_SUMMARY.md  LOGGER_USAGE.md  NEON_THEME.md  README.md  UI_IMPROVEMENTS_SUMMARY.md  WEBSITE_CHANGELOG.md  actions_components.json  actions_definitions.json  config.example.toml  env.example  file_list.txt  flattened_components.json  qdrant_config.yaml  run.sh  rust_files.txt  rustfmt.toml  setup_fix.sh  smart_device_patterns.json.example  test_improvements.md  test_metrics.rs  vendor_config.json.example
__tests__/: action_executor.spec.rs  action_registry.spec.rs  ui_schema_integration.spec.rs  utils.spec.rs
__tests__/handlers/: data_collection.spec.rs  validation_handler.spec.rs
assets/: main.css
assets/styles/: design-system.css  fonts.css
assets/styles/themes/: eva-gundam.css  gundam.css  modern-ui.css  neon-evangelion.css  terminal.css
docs/: QUICK_REFERENCE.md  THEME_CREATION_GUIDE.md  context-storage.md
examples/: llm_widget_demo.rs  new_widgets_demo.rs
src/: lib.rs  main.rs
src/action_executor/: action_registry.rs  http_client.rs  mod.rs  types.rs  utils.rs
src/action_executor/handlers/: mod.rs  (+3 more)
src/auth/: context.rs  mod.rs  service.rs
src/compiler/: mod.rs
src/components/: flashcard.rs  mod.rs
src/contexts/: settings.rs  theme.rs
src/core/: mod.rs
src/llm/: mod.rs
src/models/: mod.rs
src/schemas/: README.md  generative_ui_schema.json
src/storage/: mod.rs
src/supabase/: auth.rs  client.rs  database.rs  mod.rs  storage.rs
src/ui/: app.rs  components.rs  mod.rs
src/utils/: lib.rs  mod.rs
supabase/: config.toml  schema.sql
vector_db/: README.md  query_components.rs  upload.sh  upload_all.sh  upload_to_vector_db.rs
(+149 files in other folders)
