[package]
name = "exia"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
crossterm = "0.29.0"
dns-lookup = "2.0.4"
futures = "0.3.31"
ipnet = "2.11.0"
network-interface = "2.0.1"
pnet = "0.35.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-icmp-echo = "0.4.3"
tokio-wifiscanner = "0.2.2"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
